fix: added position absolute to container-radial-button for proper alignment

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -45,6 +45,7 @@ main {
 }
 
 .container-radial-button {
+  position: absolute;
   width: 60rem;
   height: 60rem;
   display: grid;
